# seo

./: .env.example  .gitignore  Readme.md  audit_report.html  audit_report.xlsx  pyproject.toml
site_audit/: __init__.py  __main__.py  crawler.py  proxy.py  report.py  utils.py
site_audit/bot/: __init__.py  __main__.py  app.py  handlers.py  keyboards.py  states.py
site_audit/checks/: __init__.py  broken_links.py  duplicates.py  empty_pages.py  heading_structure.py  images.py  meta_quality.py  mixed_content.py  orphan_pages.py  placeholders.py  redirects.py  robots_sitemap.py  security.py  seo.py
site_audit/config/: __init__.py  logger.py  settings.py
site_audit/services/: __init__.py  audit_service.py
